--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name"        : "koa-device",
-  "version"     : "0.0.0",
-  "description" : "A koa.js wrapper for express-device",
-
-  "repository" : {
-    "type" : "git",
-    "url"  : "git://github.com/TrovaModa/koa-device.git"
+  "name": "koa-device",
+  "version": "0.0.0",
+  "description": "A koa.js wrapper for express-device",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/TrovaModa/koa-device.git"
   },
-  "keywords" : [
+  "dependencie": {
+    "express-device": "*"
+  },
+  "keywords": [
     "koa",
     "device",
     "express"
   ],
-
-  "author"  : "yawnt <me@yawnt.com>",
-  "license" : "MIT",
-  "bugs"    : {
-    "url" : "https://github.com/TrovaModa/koa-device/issues"
+  "author": {
+    "name": "yawnt",
+    "email": "me@yawnt.com"
   },
-  "homepage" : "https://github.com/TrovaModa/koa-device"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/TrovaModa/koa-device/issues"
+  },
+  "homepage": "https://github.com/TrovaModa/koa-device"
 }
